--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <script src="js/jquery-1.11.1.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/firebase.js"></script>
+    <script type="text/javascript" src="js/firebase.min.js"></script>
     
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <script type="text/javascript" src="js/user.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/site.min.css" />
+    <script type="text/javascript" src="js/user.min.js"></script>
 
     <title>Hello World</title>
 </head>
