--- a/www/index.html
+++ b/www/index.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src *  'unsafe-inline'; script-src *  'unsafe-inline'; media-src *">
-    <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-    <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" />
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/firebase.js"></script>
-    
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <script type="text/javascript" src="js/user.js"></script>
-
-    <title>Hello World</title>
-</head>
-
-<body>
-    <div id="fullscreen_bg" class="fullscreen_bg"/>
-
-    <div class="container">
-
-        <form class="form-signin">
-            <h1 class="form-signin-heading text-muted">Sign In</h1>
-            <input type="email" name="email" class="form-control" placeholder="Email address" required="" autofocus="">
-            <input type="password" name="password" class="form-control" placeholder="Password" required="">
-            <button class="btn btn-lg btn-primary btn-block" type="button" onclick="login()">
-                Sign In
-            </button>
-        </form>
-
-    </div>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript">
-        app.initialize();
-    </script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="format-detection" content="telephone=no"><meta http-equiv="Content-Security-Policy" content="default-src *; style-src *  'unsafe-inline'; script-src *  'unsafe-inline'; media-src *"><meta name="msapplication-tap-highlight" content="no"><meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"><meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *"><script src="js/jquery-1.11.1.min.js"></script><link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"><script src="js/bootstrap.min.js"></script><script type="text/javascript" src="js/firebase.js"></script><link rel="stylesheet" type="text/css" href="css/index.css"><script type="text/javascript" src="js/user.js"></script><title>Hello World</title></head><body><div id="fullscreen_bg" class="fullscreen_bg"><div class="container"><form class="form-signin"><h1 class="form-signin-heading text-muted">Sign In</h1><input type="email" name="email" class="form-control" placeholder="Email address" required="" autofocus=""> <input type="password" name="password" class="form-control" placeholder="Password" required=""> <button class="btn btn-lg btn-primary btn-block" type="button" onclick="login()">Sign In</button></form></div><script type="text/javascript" src="cordova.js"></script><script type="text/javascript" src="js/index.js"></script><script type="text/javascript">app.initialize()</script></body></html>
